<resources>
    <string name="app_name">E M S</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="this_is_home_screen">This is home screen</string>
    <string name="this_is_work_screen">This is work screen</string>
    <string name="this_is_other_screen">This is other screen</string>
    <string name="this_is_custom_screen">This is custom screen</string>

    <string-array name="names">
        <item> </item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
    </string-array>
    <!-- Register -->
    <string name="Reg_Name">Name</string>
    <string name="Reg_Hint_Usr">Username</string>
    <string name="Reg_Hint_AdrsW">Wilaya</string>
    <string name="Reg_Hint_AdrsC">City</string>
    <string name="Reg_Hint_Ph">Phone</string>
    <string name="Reg_Hint_Email">Email</string>
    <string name="Reg_Hint_Ps">Password</string>
    <string name="Reg_Hint_ConPs">Confirm password</string>
    <string name="Reg_Hint_Button">REGISTER</string>
    <string name="Reg_Adrs">Address</string>
    <string name="Reg_Auth">Authentication</string>
    <!-- Register Toast-->
    <string name="toast_usr">enter username</string>
    <string name="toast_addW">enter your wilaya</string>
    <string name="toast_addC">enter your city</string>
    <string name="toast_ph">enter your phone</string>
    <string name="toast_email">enter your email</string>
    <string name="toast_vemail">enter a valid email</string>
    <string name="toast_ps">enter your password</string>
    <string name="toast_Min">Minimum length of Password should be 6</string>
    <string name="toast_cpsd">confirm your password</string>
    <string name="toast_chk">check your password</string>
    <string name="toast_or">You can\'t register with this email or password</string>
    <string name="Error">Error</string>
    <string name="Wrong">Wrong user</string>
    <!-- activityMain -->
    <string name="together">together we make life easier </string>
    <string name="make">Make things comes to you by one click, let us introduce offers to you.</string>
    <!-- Login -->
    <string name="Login_Hint_Email">Email</string>
    <string name="Login_Hint_Ps">Password</string>
    <string name="Login_Button">SIGN IN</string>
    <!-- Navigation Bar -->
    <string name="Item_H">Home</string>
    <string name="Item_B">Basket</string>
    <string name="Item_F">Favorite</string>
    <string name="Item_P">Profile</string>
    <!-- Fragment 1 -->
    <string name="search_hint">Search</string>
    <string name="food">Food</string>
    <string name="caf">Cafeteria</string>
    <string name="Pat">Candy</string>
    <string name="others">Others</string>
    <!-- Pop Search -->
    <string name="Pop_IN">INPUT..</string>
    <string name="Pop_Bt_Sh">SEARCH</string>
    <string name="Pop_Bt_Cl">CLOSE</string>
    <!-- Fragment 2 -->
    <string name="Frag2_NonCon_text">chosen orders</string>
    <string name="Frag2_Con_text">confirmed orders</string>
    <string name="Frag2_Con_text2">Confirmed orders</string>
    <string name="Frag2_Price_text">Price</string>
    <string name="Frag2_Pos_text">Position</string>
    <string name="Frag2_Button">CONFIRM</string>
    <string name="price">The price is on DA</string>
    <string name="home">Home</string>
    <string name="current">Current</string>
    <string name="total">Total price :</string>
    <!-- Fragment fav -->
    <string name="fav">Favorite stores</string>
    <!-- menu-->
    <string name="basket">BASKET</string>
    <string name="nothing">Nothing added yet</string>
    <!-- Fragment 3 -->

    <string name="Frag3_name_Text">Name</string>
    <string name="Frag3_RK_Hint">Ranking</string>
    <string name="Frag3_Us_Hint">Username</string>
    <string name="Frag3_Adrs_Hint">Address</string>
    <string name="Frag3_ph_Hint">Phone</string>
    <string name="Frag3_Dev_Hint">Delivery (yes/no)</string>
    <string name="Frag3_more_Hint">More</string>
    <string name="Frag3_Button">CONFIRM</string>
    <string name="Lang"> CHANGE LANGUAGE</string>
    <string name="auth">Authentication</string>
        <string name="cord">Home coordinates</string>
    <string name="desc">Description..</string>
    <string name="ChooseLang">CHOOSE LANGUAGE ..</string>
    <string name="Frag3_logout">Logout</string>
</resources>
