<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Fragment_3"
    android:id="@+id/frameLayout"
    android:focusable="true"
    android:clickable="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:gravity="center"
                android:weightSum="3">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_weight="2"
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/user_2"/>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/t_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="3dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:text="Name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/t_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="3dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:text="Phone"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/t_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="3dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:text="Region"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:textColor="@color/custom_black"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="50dp"
                android:visibility="visible"
                android:layout_below="@+id/change_profile_picture"
                android:background="@color/custom_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <!--<ImageView
                    android:id="@+id/close_open_sign"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/close_sign"/>-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/Frag3_name_Text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/custom_black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_marginTop="15dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingStart="13dp"
                    android:background="@drawable/text_border_"
                    android:inputType="text"
                    android:textColor="#686868"
                    android:textAlignment="viewStart"
                    android:hint="@string/Frag3_Us_Hint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/Frag3_Adrs_Hint"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/custom_black"/>

                <!--<com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wilaya"
                    android:layout_marginTop="5dp"
                    app:met_floatingLabel="normal"
                    android:inputType="text"
                    android:textAlignment="viewStart"
                    android:hint="Wilaya"/>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/wilaya"
                        android:enabled="false"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:paddingStart="13dp"
                        android:background="@drawable/text_border_"
                        android:hint="@string/Reg_Hint_AdrsW"
                        android:textColor="#686868"
                        android:textStyle="normal"/>
                    <Spinner
                        android:layout_weight="1"
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/city"
                    android:layout_marginTop="5dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingStart="13dp"
                    android:background="@drawable/text_border_"
                    android:inputType="text"
                    android:textColor="#686868"
                    android:textAlignment="viewStart"
                    android:hint="@string/Reg_Hint_AdrsC"/>

                <RelativeLayout
                    android:id="@+id/homeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_border_">

                    <EditText
                        android:layout_toStartOf="@+id/marker"
                        android:id="@+id/homeAddressInput"
                        android:enabled="true"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cord"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:paddingStart="13dp"
                        android:background="@drawable/text_border_"
                        android:textStyle="normal"
                        android:textColor="#686868"/>

                    <ImageView
                        android:id="@+id/marker"
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="7dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/marker_3"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="23dp"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/auth"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/custom_black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone"
                    android:layout_marginTop="15dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingStart="13dp"
                    android:background="@drawable/text_border_"
                    android:inputType="phone"
                    android:textColor="#686868"
                    android:textAlignment="viewStart"
                    android:hint="@string/Frag3_ph_Hint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/Frag3_more_Hint"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/custom_black"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:paddingEnd="3dp"
                    android:layout_marginTop="15dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingStart="10dp"
                    android:background="@drawable/text_border_"
                    android:hint="@string/desc"
                    android:textColor="#686868"
                    tools:ignore="RtlCompat" />

                <ImageView
                    android:id="@+id/language_picture"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="23dp"
                    android:layout_gravity="center"
                    android:src="@drawable/translate" />

                <TextView
                    android:id="@+id/language_txt"
                    android:layout_below="@+id/picture_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textStyle="normal"
                    android:textSize="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/custom_black"
                    android:text="@string/Lang"/>

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/Frag2_Button"
                    android:padding="3dp"
                    android:layout_centerVertical="true"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_border_01"/>

                <TextView
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:text="@string/Frag3_logout"
                    android:padding="3dp"
                    android:textColor="@color/custom_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
